--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow">
     <meta content="https://github.com/fielstamper.png" name="twitter:image">
     <meta content="caitlyn's site" name="twitter:title">
-    <meta content="webby site" name="twitter:description">
+    <meta content="hi" name="twitter:description">
     <link rel="icon" href="https://i.imgur.com/SHR6b4fh.jpg">
     <title>caitlyn's site</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
