--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>caitlyn's site</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
+    <script src="js/script.js"></script>
 
 </head>
 
