--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="title-subtext">
         <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
     </div>
-    <img src="pfp.jpg" class="pfp">
+    <img src="assets/pfp.jpg" class="pfp">
     <div class="box">
         <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> that is majoring in computer science who
             loves to learn
@@ -56,13 +56,13 @@
     </div>
     </div>
     <div>
-        <img src="right_view_girl.png" class="right_view_girl">
+        <img src="assets/right_view_girl.png" class="right_view_girl">
     </div>
     <div>
-        <img src="front_view_girl.png" class="front_view_girl">
+        <img src="assets/front_view_girl.png" class="front_view_girl">
     </div>
     <div>
-        <img src="side_view_girl.png" class="side_view_girl">
+        <img src="assets/side_view_girl.png" class="side_view_girl">
     </div>
 </body>
 
