--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
     <div>
         <img src="assets/side_view_girl.png" class="side_view_girl">
     </div>
+    <div class="currently">
+        <p>currently playing...</p>
+    </div>
 </body>
 
 </html>
