--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>Projects</h>
     </div>
     <div style="padding-left: 530px; margin-top: -15px;">
-        <p>empty for now... :D</p>
+        <p>empty.... for now :D</p>
     </div>
     <div class="projects">
         <h1>Other Stuff</h1>
