--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://caitlyn.cc">
     <meta name="robots" content="index, follow">
     <meta content="https://github.com/fielstamper.png" name="twitter:image">
@@ -16,54 +15,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
     <script src="js/script.js"></script>
-
 </head>
 
 <body>
-    <div class="title">
-        <h1>hi, i'm caitlyn!</h1>
-    </div>
-    <div class="title-subtext">
-        <p style="color:rgb(228, 208, 155); font-weight:500;">she/her</p>
-    </div>
-    <div class="title-subtext">
-        <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
-    </div>
-    <img src="assets/pfp.jpg" class="pfp">
-    <div class="box">
-        <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> that is majoring in computer science who
-            loves to learn
-            new
-            things, currently interested in learning: <strong>programming</strong> (python)</strong>, <strong>🇨🇳
-                chinese,</strong> and 3d modelling via <strong>blender!</strong>
-            <br><br><br>
-            i'm also a really huge fan of music, some of my favourite artists being sampha, kendrick lamar, kanye west,
-            j dilla and cocteua twins<br><br>
-            one piece fanatic ( • ⩊ • )
-        </p>
-    </div>
-    <div class="projects">
-        <h1>Projects</h>
-    </div>
-    <div style="padding-left: 530px; margin-top: -15px;">
-        <p>empty.... for now :D</p>
-    </div>
-    <div class="projects">
-        <h1>Other Stuff</h1>
-    </div>
-    <div style="padding-left: 530px; margin-top: -15px;">
-        <p>latest blender project • <span class="nira_chan">nira_chan_stylised.blend</p>
-    </div>
-    </div>
-    <div>
-        <img src="assets/right_view_girl.png" class="right_view_girl">
-    </div>
-    <div>
-        <img src="assets/front_view_girl.png" class="front_view_girl">
-    </div>
-    <div>
-        <img src="assets/side_view_girl.png" class="side_view_girl">
-    </div>
+    <main class="container">
+        <section class="header">
+            <div class="title">
+                <h1>hi, i'm caitlyn!</h1>
+            </div>
+            <div class="title-subtext">
+                <p class="pronouns">she/her</p>
+            </div>
+            <div class="title-subtext">
+                <p class="about-heading">About me</p>
+            </div>
+            <img src="assets/pfp.jpg" class="pfp" alt="Profile picture">
+        </section>
+
+        <section class="content">
+            <div class="box">
+                <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> that is majoring in computer
+                    science who loves to learn new things, currently interested in learning:
+                    <strong>programming</strong> (python), <strong>🇨🇳 chinese,</strong> and 3d modelling via
+                    <strong>blender!</strong>
+                    <br><br><br>
+                    i'm also a really huge fan of music, some of my favourite artists being sampha, kendrick lamar,
+                    kanye west, j dilla and cocteua twins<br><br>
+                    one piece fanatic ( • ⩊ • )
+                </p>
+            </div>
+
+            <div class="projects-section">
+                <h2>Projects</h2>
+                <p>empty.... for now :D</p>
+            </div>
+
+            <div class="other-stuff-section">
+                <h2>Other Stuff</h2>
+                <p>latest blender project • <span class="nira_chan">nira_chan_stylised.blend</span></p>
+            </div>
+
+            <div class="blender-showcase">
+                <img src="assets/side_view_girl.png" class="view-girl" alt="Side view">
+                <img src="assets/front_view_girl.png" class="view-girl" alt="Front view">
+                <img src="assets/right_view_girl.png" class="view-girl" alt="Right view">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
