--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+    <button class="Home">Home</button>
+    <button class="Otherstuff">About</button>
+    <button class="Contact">Contact</button>
     <div class="title">
         <h1>hi, i'm caitlyn!</h1>
     </div>
