--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 </head>
 
 <body>
-    <button class="Home">Home</button>
-    <button class="Otherstuff">About</button>
-    <button class="Contact">Contact</button>
+    <a href="https://kosuka.dev" class="Home">Home</a>
+
+    <a href="https://kosuka.dev/about" class="Otherstuff">About</a>
+    <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
     <div class="title">
         <h1>hi, i'm caitlyn!</h1>
     </div>
