--- a/about/index.html
+++ b/about/index.html
@@ -8,4 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<body>
+    <div class="wrapper">
+        <h1>About Me</h1>
+        <p>wip</p>
+        <a href="index.html" class="button">Back to Home</a>
+    </div>
+</body>
+
 </html>
