--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <h1>About Me</h1>
         <p>wip</p>
-        <a href="index.html" class="button">Back to Home</a>
+        <a href="/" class="button">Back to Home</a>
     </div>
 </body>
 
