--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
         <h1>Other Stuff</h1>
     </div>
     <div style="padding-left: 530px; margin-top: -15px;">
-        <p>latest blender project • <span class="nira_chan">nira_chan_stylised.blend</p>
+        <p>latest blender project •
+            <a href="path-to-your-file.blend" class="nira_chan" download>nira_chan_stylised.blend</a>
+        </p>
     </div>
+
     </div>
     <div>
         <img src="assets/right_view_girl.png" class="right_view_girl">
