--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div style="padding-left: 530px; margin-top: -15px;">
         <p>latest blender project •
-            <a href="path-to-your-file.blend" class="nira_chan" download>nira_chan_stylised.blend</a>
+            <a href="https://kosuka.dev/blender" class="nira_chan" download>nira_chan_stylised.blend</a>
         </p>
     </div>
 
