--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
     <div class="projects">
         <h1>Other Stuff</h1>
     </div>
+
     <div style="padding-left: 530px; margin-top: -15px;">
         <p>latest blender project •
-            <a href="https://kosuka.dev/blender" class="nira_chan" download>nira_chan_stylised.blend</a>
+            <a href="https://kosuka.dev/blender" class="nira_chan" target="_blank">nira_chan_stylised.blend</a>
         </p>
     </div>
 
