--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div style="padding-left: 530px; margin-top: -15px;">
         <p>latest blender project •
-            <a href="https://kosuka.dev/blender" class="nira_chan" target="_blank">nira_chan_stylised.blend</a>
+            <a href="https://kosuka.dev/blender" class="nira_chan">nira_chan_stylised.blend</a>
         </p>
     </div>
 
