--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>hi, i'm caitlyn!</h1>
     </div>
     <div class="title-subtext">
-        <p style="color:rgb(228, 208, 155); font-weight:500;">she/her</p>
+        <p style="color: #8a9fff; font-weight:500;">she/her</p>
     </div>
     <div class="title-subtext">
         <p style="font-size: 20px; font-weight: 600;"><br>About me</p>
