--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <p>empty.... for now :D</p>
     </div>
     <div class="projects">
-        <h1>Other Stuff</h1>
+        <h1>Creative projects</h1>
     </div>
 
     <div style="padding-left: 530px; margin-top: -15px;">
-        <p>latest blender project •
+        <p>→ latest blender project •
             <a href="https://kosuka.dev/blender" class="nira_chan">nira_chan_stylised.blend</a>
         </p>
     </div>
