--- a/index.html
+++ b/index.html
@@ -20,57 +20,46 @@
 </head>
 
 <body>
-    <a href="https://kosuka.dev" class="Home">Home</a>
+    <div class="content-wrapper">
+        <div class="buttons">
+            <a href="https://kosuka.dev" class="Home">Home</a>
 
-    <a href="https://kosuka.dev/about" class="Otherstuff">About</a>
-    <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
-    <div class="title">
-        <h1>hi, i'm caitlyn!</h1>
+            <a href="https://kosuka.dev/about" class="About">About</a>
+            <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
+        </div>
+        <div class="title-container">
+            <div class="title-image-wrapper">
+                <div class="title">
+                    <h1>hi, i'm caitlyn!</h1>
+                    <p class="title-subtext" style="color:#ffdf9a; font-weight:500;">she/her</p>
+                    <br>
+                    <div class="line"></div>
+                </div>
+            </div>
+            <div class="title-subtext">
+                <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
+            </div>
+            <div class="box">
+                <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> majoring in computer science
+                    who loves to learn new things, currently interested in learning: <strong>programming</strong>
+                    (python),
+                    <strong>🇨🇳 chinese,</strong> and 3D modeling via <strong>Blender!</strong>
+                    <br><br>
+                    i'm also a huge music fan, some of my favorite artists being Sampha, Kendrick Lamar, Kanye West,
+                    J Dilla, and Cocteau Twins.<br><br>
+                    One Piece fanatic ( • ⩊ • )
+                </p>
+            </div>
+            <div>
+                <h1>Projects</h1>
+                <p>empty... for now :D</p>
+            </div>
+            <div><br><br>
+                <h1>Creative projects</h1>
+                <p>→ latest blender project • <a href="https://kosuka.dev/blender"
+                        class="nira_chan">nira_chan_stylised.blend</a></p>
+            </div>
+        </div>
     </div>
-    <div class="title-subtext">
-        <p style="color: #9aacff; font-weight:500;">she/her</p>
-    </div>
-    <div class="title-subtext">
-        <p style="font-size: 20px; font-weight: 600;"><br>About me</p>
-    </div>
-    <div class="box">
-        <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> that is majoring in computer science who
-            loves to learn
-            new
-            things, currently interested in learning: <strong>programming</strong> (python)</strong>, <strong>🇨🇳
-                chinese,</strong> and 3d modelling via <strong>blender!</strong>
-            <br><br>
-            i'm also a really huge fan of music, some of my favourite artists being sampha, kendrick lamar, kanye west,
-            j dilla and cocteua twins<br><br>
-            one piece fanatic ( • ⩊ • )
-        </p>
-    </div>
-    <div class="projects">
-        <h1>Projects</h>
-    </div>
-    <div style="padding-left: 530px; margin-top: -15px;">
-        <p>empty.... for now :D</p>
-    </div>
-    <div class="projects">
-        <h1>Creative projects</h1>
-    </div>
-
-    <div style="padding-left: 530px; margin-top: -15px;">
-        <p>→ latest blender project •
-            <a href="https://kosuka.dev/blender" class="nira_chan">nira_chan_stylised.blend</a>
-        </p>
-    </div>
-
-    </div>
-    <div>
-        <img src="assets/right_view_girl.png" class="right_view_girl">
-    </div>
-    <div>
-        <img src="assets/front_view_girl.png" class="front_view_girl">
-    </div>
-    <div>
-        <img src="assets/side_view_girl.png" class="side_view_girl">
     </div>
 </body>
-
-</html>
