--- a/test/index.html
+++ b/test/index.html
@@ -20,16 +20,46 @@
 </head>
 
 <body>
-    <div class="title-container">
-        <div class="title-image-wrapper">
-            <div class="title">
-                <h1>hi, i'm caitlyn!</h1>
-                <p class="title-subtext" style="color:rgb(228, 208, 155); font-weight:500;">she/her</p>
+    <div class="content-wrapper">
+        <div class="buttons">
+            <a href="https://kosuka.dev" class="Home">Home</a>
+
+            <a href="https://kosuka.dev/about" class="About">About</a>
+            <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
+        </div>
+        <div class="title-container">
+            <div class="title-image-wrapper">
+                <div class="title">
+                    <h1>hi, i'm caitlyn!</h1>
+                    <p class="title-subtext" style="color:#ffdf9a; font-weight:500;">she/her</p>
+                    <br>
+                    <div class="line"></div>
+                </div>
             </div>
-            <img src="assets/pfp.jpg" class="pfp">
+            <div class="title-subtext">
+                <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
+            </div>
+            <div class="box">
+                <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> majoring in computer science
+                    who loves to learn new things, currently interested in learning: <strong>programming</strong>
+                    (python),
+                    <strong>🇨🇳 chinese,</strong> and 3D modeling via <strong>Blender!</strong>
+                    <br><br>
+                    i'm also a huge music fan, some of my favorite artists being Sampha, Kendrick Lamar, Kanye West,
+                    J Dilla, and Cocteau Twins.<br><br>
+                    One Piece fanatic ( • ⩊ • )
+                </p>
+            </div>
+            <div>
+                <h1>Projects</h1>
+                <p>empty... for now :D</p>
+            </div>
+            <div><br><br>
+                <h1>Creative projects</h1>
+                <p>→ latest blender project • <a href="https://kosuka.dev/blender"
+                        class="nira_chan">nira_chan_stylised.blend</a></p>
+            </div>
         </div>
-        <div class="title-subtext">
-            <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
-        </div>
+    </div>
     </div>
 </body>
