--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="content-wrapper">
+    <div id="" <div class="content-wrapper">
         <div class="buttons">
             <a href="https://kosuka.dev" class="Home">Home</a>
 
@@ -59,6 +59,9 @@
                 <p>→ latest blender project • <a href="https://kosuka.dev/blender"
                         class="nira_chan">nira_chan_stylised.blend</a></p>
             </div>
+
+            <div id="lastfm-container"></div>
+
         </div>
     </div>
     </div>
