--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div id="" <div class="content-wrapper">
+    <div class="content-wrapper">
         <div class="buttons">
             <a href="https://kosuka.dev" class="Home">Home</a>
 
