--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 <p>→ latest blender project • <a href="https://kosuka.dev/blender"
                         class="nira_chan">nira_chan_stylised.blend</a></p>
             </div>
+
+            <div id="lastfm-container"></div>
+
         </div>
     </div>
     </div>
