--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
                 <p>→ latest blender project • <a href="https://kosuka.dev/blender"
                         class="nira_chan">nira_chan_stylised.blend</a></p>
             </div>
-            <div>
-                <h1>Music</h1>
-            </div>
-
+            <div class="line"></div>
             <div id="lastfm-container"></div>
 
         </div>
