--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="title-image-wrapper">
                 <div class="title">
                     <h1>hi, i'm caitlyn!</h1>
-                    <p class="title-subtext" style="color:#ffdf9a; font-weight:500;">she/her</p>
+                    <p class="title-subtext" style="color: #9af1ff; font-weight:500;">she/her</p>
                     <br>
                     <div class="line"></div>
                 </div>
