--- a/contact/index.html
+++ b/contact/index.html
@@ -1,19 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
     <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="canonical" href="https://caitlyn.cc">
+    <meta name="robots" content="index, follow">
+    <meta content="https://github.com/fielstamper.png" name="twitter:image">
+    <meta content="caitlyn's site" name="twitter:title">
+    <meta content="my personal homepage" name="twitter:description">
+    <link rel="icon" href="https://i.imgur.com/SHR6b4fh.jpg">
+    <title>caitlyn's site</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
+    <script src="js/script.js"></script>
+
 </head>
 
 <body>
-    <div class="wrapper">
-        <h1>Contact</h1>
-        <p>wip</p>
-        <a href="/" class="button">Back to Home</a>
+    <div class="content-wrapper">
+        <div class="buttons">
+            <a href="https://kosuka.dev" class="Home">Home</a>
+
+            <a href="https://kosuka.dev/about" class="About">About</a>
+            <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
+        </div>
+        <div class="title-container">
+            <div class="title-image-wrapper">
+                <div class="title">
+                    <h1>hi, i'm caitlyn!</h1>
+                    <p class="title-subtext" style="color: #9af1ff; font-weight:500;">she/her</p>
+                    <br>
+                    <div class="line"></div>
+                </div>
+            </div>
+            <div class="title-subtext">
+                <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
+            </div>
+            <div class="box">
+                <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> majoring in computer science
+                    who loves to learn new things, currently interested in learning: <strong>programming</strong>
+                    (python),
+                    <strong>🇨🇳 chinese,</strong> and 3D modeling via <strong>Blender!</strong>
+                    <br><br>
+                    i'm also a huge music fan, some of my favorite artists being Sampha, Kendrick Lamar, Kanye West,
+                    J Dilla, and Cocteau Twins.<br><br>
+                    One Piece fanatic ( • ⩊ • )
+                </p>
+            </div>
+            <div>
+                <h1>Projects</h1>
+                <p>empty... for now :D</p>
+            </div>
+            <div><br><br>
+                <h1>Creative projects</h1>
+                <p>→ latest blender project • <a href="https://kosuka.dev/blender"
+                        class="nira_chan">nira_chan_stylised.blend</a></p>
+                <div class="line"></div>
+            </div>
+            <div id="lastfm-container"></div>
+
+        </div>
+    </div>
     </div>
 </body>
-
-</html>
