--- a/contact/index.html
+++ b/contact/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="title-subtext">
-                <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
+                <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
             </div>
             <div class="box">
                 <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> majoring in computer science
