--- a/contact/index.html
+++ b/contact/index.html
@@ -39,14 +39,9 @@
                 <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
             </div>
             <div class="box">
-                <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> majoring in computer science
-                    who loves to learn new things, currently interested in learning: <strong>programming</strong>
-                    (python),
-                    <strong>🇨🇳 chinese,</strong> and 3D modeling via <strong>Blender!</strong>
-                    <br><br>
-                    i'm also a huge music fan, some of my favorite artists being Sampha, Kendrick Lamar, Kanye West,
-                    J Dilla, and Cocteau Twins.<br><br>
-                    One Piece fanatic ( • ⩊ • )
+                <p>→ Twitter
+                    <br>
+                    → Github:
                 </p>
             </div>
 
