--- a/contact/index.html
+++ b/contact/index.html
@@ -39,10 +39,11 @@
                 <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
             </div>
             <div class="box">
-                <p>→ Twitter
-                    <br>
-                    → Github:
-                </p>
+                <ul>
+                    <li>Twitter</li>
+                    <li>Github</li>
+                    <li>Discord</li>
+                </ul>
             </div>
 
         </div>
