--- a/contact/index.html
+++ b/contact/index.html
@@ -38,7 +38,7 @@
             <div class="title-subtext">
                 <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
             </div>
-            <div class="box">
+            <div class="contactbox">
                 <ul>
                     <li>Twitter</li>
                     <li>Github</li>
