--- a/contact/index.html
+++ b/contact/index.html
@@ -39,11 +39,11 @@
                 <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
             </div>
             <div class="contactbox">
-                <ul>
-                    <li>Twitter</li>
-                    <li>Github</li>
-                    <li>Discord</li>
-                </ul>
+                <p>
+                    →Twitter
+                    →Github
+                    →Discord
+                </p>
             </div>
 
         </div>
