--- a/contact/index.html
+++ b/contact/index.html
@@ -40,9 +40,9 @@
             </div>
             <div class="contactbox">
                 <p>
-                    →Twitter
-                    →Github
-                    →Discord
+                    →Twitter <br>
+                    →Github <br>
+                    →Discord <br>
                 </p>
             </div>
 
