--- a/contact/index.html
+++ b/contact/index.html
@@ -40,9 +40,7 @@
             </div>
             <div class="contactbox">
                 <p>
-                    →Twitter <br>
-                    →Github <br>
-                    →Discord <br>
+                    Twitter
                 </p>
             </div>
 
