--- a/contact/index.html
+++ b/contact/index.html
@@ -38,11 +38,9 @@
             <div class="title-subtext">
                 <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
             </div>
-            <div class="twitterbox">
-                <p>
-                    Twitter
-                </p>
-            </div>
+            <p clas="twitterbox">
+                Twitter
+            </p>
 
         </div>
     </div>
