--- a/contact/index.html
+++ b/contact/index.html
@@ -38,7 +38,7 @@
             <div class="title-subtext">
                 <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
             </div>
-            <p clas="twitterbox">
+            <p class="twitterbox">
                 Twitter
             </p>
 
