--- a/contact/index.html
+++ b/contact/index.html
@@ -38,10 +38,14 @@
             <div class="title-subtext">
                 <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
             </div>
-            <p class="twitterbox">
-                Twitter
-            </p>
-
+            <div="contactbox">
+                <p class="twitterbox">
+                    Twitter
+                </p>
+                <p class="twitterbox">
+                    Twitter
+                </p>
+            </div>
         </div>
     </div>
     </div>
