--- a/contact/index.html
+++ b/contact/index.html
@@ -38,7 +38,7 @@
             <div class="title-subtext">
                 <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
             </div>
-            <div="contactbox">
+            <div class="contactbox">
                 <p class="twitterbox">
                     Twitter
                 </p>
