--- a/contact/index.html
+++ b/contact/index.html
@@ -45,6 +45,12 @@
                 <p class="twitterbox">
                     Twitter
                 </p>
+                <p class="twitterbox">
+                    Twitter
+                </p>
+                <p class="twitterbox">
+                    Twitter
+                </p>
             </div>
         </div>
     </div>
