--- a/contact/index.html
+++ b/contact/index.html
@@ -43,13 +43,13 @@
                     Twitter
                 </p>
                 <p class="twitterbox">
-                    Twitter
+                    Github
                 </p>
                 <p class="twitterbox">
-                    Twitter
+                    Discord
                 </p>
                 <p class="twitterbox">
-                    Twitter
+                    Email
                 </p>
             </div>
         </div>
