--- a/contact/index.html
+++ b/contact/index.html
@@ -39,18 +39,22 @@
                 <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
             </div>
             <div class="contactbox">
-                <p class="twitterbox">
-                    Twitter
-                </p>
-                <p class="twitterbox">
-                    Github
-                </p>
-                <p class="twitterbox">
-                    Discord
-                </p>
-                <p class="twitterbox">
-                    Email
-                </p>
+                <div class="col1">
+                    <p class="twitterbox">
+                        Twitter
+                    </p>
+                    <p class="twitterbox">
+                        Github
+                    </p>
+                </div>
+                <div class="col2">
+                    <p class="twitterbox">
+                        Discord
+                    </p>
+                    <p class="twitterbox">
+                        Email
+                    </p>
+                </div>
             </div>
         </div>
     </div>
