--- a/contact/index.html
+++ b/contact/index.html
@@ -55,8 +55,15 @@
                         Email
                     </p>
                 </div>
+                <div class="col3">
+                    <p class="twitterbox">
+                        Other 1
+                    </p>
+                    <p class="twitterbox">
+                        Other 2
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 </body>
