--- a/contact/index.html
+++ b/contact/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="title-subtext">
-                <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
+                <p style="font-size: 20px; font-weight: 400;"><br>Contact me</p>
             </div>
             <div class="contactbox">
                 <div class="col1">
