--- a/contact/index.html
+++ b/contact/index.html
@@ -44,7 +44,7 @@
                         Twitter
                     </p>
                     <p class="twitterbox">
-                        Github
+                        Github.
                     </p>
                 </div>
                 <div class="col2">
