--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div><br><br>
                 <h1>Creative projects</h1>
                 <p>→ latest blender project • <a href="https://kosuka.dev/blender"
-                        class="nira_chan">nira_chan_stylised.blend h</a></p>
+                        class="nira_chan">nira_chan_stylised.blend</a></p>
                 <div class="line"></div>
             </div>
             <div id="lastfm-container"></div>
