--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <br><br>
                     i'm also a huge music fan, some of my favorite artists being Sampha, Kendrick Lamar, Kanye West,
                     J Dilla, and Cocteau Twins.<br><br>
-                    One Piece fanatic ( • ⩊ • )
+                    One Piece fanatic ( • ⩊ • ).
                 </p>
             </div>
             <div>
