--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="canonical" href="https://caitlyn.cc">
     <meta name="robots" content="index, follow">
-    <meta content="https://github.com/fielstamper.png" name="twitter:image">
+    <meta content="https://avatars.githubusercontent.com/u/161728157?v=4" name="twitter:image">
     <meta content="caitlyn's site" name="twitter:title">
     <meta content="my personal homepage" name="twitter:description">
     <link rel="icon" href="https://i.imgur.com/SHR6b4fh.jpg">
