--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="title-subtext">
-                <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
+                <h2>About me</h2>>
             </div>
             <div class="box">
                 <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> majoring in computer science
