--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="title-subtext">
-                <h2>About me</h2>>
+                <h3>About me</h3>
             </div>
             <div class="box">
                 <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> majoring in computer science
