--- a/about/index.html
+++ b/about/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
     <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="canonical" href="https://caitlyn.cc">
+    <meta name="robots" content="index, follow">
+    <meta content="https://github.com/fielstamper.png" name="twitter:image">
+    <meta content="caitlyn's site" name="twitter:title">
+    <meta content="contacts" name="twitter:description">
+    <link rel="icon" href="https://i.imgur.com/SHR6b4fh.jpg">
+    <title>caitlyn's site</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
-    <div class="wrapper">
-        <h1>About Me</h1>
-        <p>wip</p>
-        <a href="/" class="button">Back to Home</a>
+    <div class="content-wrapper">
+        <div class="buttons">
+            <a href="https://kosuka.dev" class="Home">Home</a>
+
+            <a href="https://kosuka.dev/about" class="About">About</a>
+            <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
+        </div>
+        <div class="title-container">
+            <div class="title-image-wrapper">
+                <div class="title">
+                    <h1>hi, i'm caitlyn!</h1>
+                    <p class="title-subtext" style="color: #ff9ac1; font-weight:500;">she/her</p>
+                    <br>
+                    <div class="line"></div>
+                </div>
+            </div>
+            <div class="title-subtext">
+                <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
+            </div>
+        </div>
     </div>
 </body>
-
-</html>
