--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     J Dilla, and Cocteau Twins.<br><br>
                     One Piece fanatic ( • ⩊ • ).
                 </p>
-                <div>
+                <div> <br>
                     <h2>Projects</h2>
                     <p>empty... for now :D</p>
                 </div>
