--- a/index.html
+++ b/index.html
@@ -16,52 +16,57 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
     <script src="js/script.js"></script>
+    <script src="https://unpkg.com/@barba/core"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
 
 </head>
 
-<body>
-    <div id="content-wrapper" class="content-wrapper">
-        <div class="buttons">
-            <a href="https://kosuka.dev" class="Home">Home</a>
+<body data-barba="wrapper">
+    <div data-barba="container">
+        <div id="content-wrapper" class="content-wrapper">
+            <div class="buttons">
+                <a href="https://kosuka.dev" class="Home">Home</a>
 
-            <a href="https://kosuka.dev/about" class="About">About</a>
-            <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
-        </div>
-        <div class="title-container">
-            <div class="title-image-wrapper">
-                <div class="title">
-                    <h1>hi, i'm caitlyn!</h1>
-                    <p class="title-subtext" style="color: #ff9ac1; font-weight:500;">she/her</p>
-                    <br>
+                <a href="https://kosuka.dev/about" class="About">About</a>
+                <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
+            </div>
+            <div class="title-container">
+                <div class="title-image-wrapper">
+                    <div class="title">
+                        <h1>hi, i'm caitlyn!</h1>
+                        <p class="title-subtext" style="color: #ff9ac1; font-weight:500;">she/her</p>
+                        <br>
+                        <div class="line"></div>
+                    </div>
+                </div>
+                <div class="title-subtext">
+                    <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
+                </div>
+                <div class="box">
+                    <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> majoring in computer science
+                        who loves to learn new things, currently interested in learning: <strong>programming</strong>
+                        (python),
+                        <strong>🇨🇳 chinese,</strong> and 3D modeling via <strong>Blender!</strong>
+                        <br><br>
+                        i'm also a huge music fan, some of my favorite artists being Sampha, Kendrick Lamar, Kanye West,
+                        J Dilla, and Cocteau Twins.<br><br>
+                        One Piece fanatic ( • ⩊ • ).
+                    </p>
+                </div>
+                <div>
+                    <h2>Projects</h2>
+                    <p>empty... for now :D</p>
+                </div>
+                <div><br><br>
+                    <h2>Creative projects</h2>
+                    <p>→ latest blender project • <a href="https://kosuka.dev/blender"
+                            class="nira_chan">nira_chan_stylised.blend</a></p>
                     <div class="line"></div>
                 </div>
-            </div>
-            <div class="title-subtext">
-                <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
-            </div>
-            <div class="box">
-                <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> majoring in computer science
-                    who loves to learn new things, currently interested in learning: <strong>programming</strong>
-                    (python),
-                    <strong>🇨🇳 chinese,</strong> and 3D modeling via <strong>Blender!</strong>
-                    <br><br>
-                    i'm also a huge music fan, some of my favorite artists being Sampha, Kendrick Lamar, Kanye West,
-                    J Dilla, and Cocteau Twins.<br><br>
-                    One Piece fanatic ( • ⩊ • ).
-                </p>
-            </div>
-            <div>
-                <h2>Projects</h2>
-                <p>empty... for now :D</p>
-            </div>
-            <div><br><br>
-                <h2>Creative projects</h2>
-                <p>→ latest blender project • <a href="https://kosuka.dev/blender"
-                        class="nira_chan">nira_chan_stylised.blend</a></p>
-                <div class="line"></div>
-            </div>
-            <div id="lastfm-container"></div>
+                <div id="lastfm-container"></div>
 
+            </div>
         </div>
     </div>
     </div>
