--- a/about/index.html
+++ b/about/index.html
@@ -16,27 +16,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
 
+
+
 </head>
 
-<body>
-    <div class="content-wrapper">
-        <div class="buttons">
-            <a href="https://kosuka.dev" class="Home">Home</a>
+<body data-barba="wrapper">
+    <div data-barba="container">
+        <div class="content-wrapper">
+            <div class="buttons">
+                <a href="https://kosuka.dev" class="Home">Home</a>
 
-            <a href="https://kosuka.dev/about" class="About">About</a>
-            <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
-        </div>
-        <div class="title-container">
-            <div class="title-image-wrapper">
-                <div class="title">
-                    <h1>hi, i'm caitlyn!</h1>
-                    <p class="title-subtext" style="color: #ff9ac1; font-weight:500;">she/her</p>
-                    <br>
-                    <div class="line"></div>
-                </div>
+                <a href="https://kosuka.dev/about" class="About">About</a>
+                <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
             </div>
-            <div class="title-subtext">
-                <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
+            <div class="title-container">
+                <div class="title-image-wrapper">
+                    <div class="title">
+                        <h1>hi, i'm caitlyn!</h1>
+                        <p class="title-subtext" style="color: #ff9ac1; font-weight:500;">she/her</p>
+                        <br>
+                        <div class="line"></div>
+                    </div>
+                </div>
+                <div class="title-subtext">
+                    <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
+                </div>
             </div>
         </div>
     </div>
