--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div data-barba="container">
         <div id="content-wrapper" class="content-wrapper">
             <div class="buttons">
-                <a href="https://kosuka.dev" class="Home">Home</a>
+                <a href="/" class="Home">Home</a>
 
                 <a href="https://kosuka.dev/about" class="About">About</a>
                 <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
