--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="buttons">
                 <a href="/" class="Home">Home</a>
 
-                <a href="https://kosuka.dev/about" class="About">About</a>
-                <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
+                <a href="/about/index.html" class="About">About</a>
+                <a href="/contact/index.html" class="Contact">Contact</a>
             </div>
             <div class="title-container">
                 <div class="title-image-wrapper">
