--- a/about/index.html
+++ b/about/index.html
@@ -24,10 +24,10 @@
     <div data-barba="container">
         <div class="content-wrapper">
             <div class="buttons">
-                <a href="https://kosuka.dev" class="Home">Home</a>
+                <a href="/" class="Home">Home</a>
 
-                <a href="https://kosuka.dev/about" class="About">About</a>
-                <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
+                <a href="/about/index.html" class="About">About</a>
+                <a href="/contact/index.html" class="Contact">Contact</a>
             </div>
             <div class="title-container">
                 <div class="title-image-wrapper">
