--- a/about/index.html
+++ b/about/index.html
@@ -15,8 +15,8 @@
     <title>caitlyn's site</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="/js/script.js"></script>
 
 </head>
 
