--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body data-barba="wrapper">
-    <div data-barba="container">
+    <div id="main-container">
         <div id="content-wrapper" class="content-wrapper">
             <div class="buttons">
                 <a href="https://kosuka.dev" class="Home">Home</a>
