--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="canonical" href="https://caitlyn.cc">
@@ -24,10 +24,10 @@
     <div data-barba="container">
         <div class="content-wrapper">
             <div class="buttons">
-                <a href="https://kosuka.dev" class="Home">Home</a>
+                <a href="/" class="Home">Home</a>
 
-                <a href="https://kosuka.dev/about" class="About">About</a>
-                <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
+                <a href="/about/" class="About">About</a>
+                <a href="/contact/" class="Contact">Contact</a>
             </div>
             <div class="title-container">
                 <div class="title-image-wrapper">
