--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div data-barba="container">
         <div id="content-wrapper" class="content-wrapper">
             <div class="buttons">
-                <a href="https://kosuka.dev" class="Home">Home</a>
-                <a href="https://kosuka.dev/about" class="About">About</a>
-                <a href="https://kosuka.dev/contact" class="Contact">Contact</a>
+                <a href="/" class="Home">Home</a>
+                <a href="/about/" class="About">About</a>
+                <a href="/contact/" class="Contact">Contact</a>
             </div>
             <div class="title-container">
                 <div class="title-image-wrapper">
@@ -61,7 +61,9 @@
                     <div class="line"></div>
                 </div>
                 <div id="lastfm-container"></div>
-
+                <div>
+                    <h2>Friends!</h2>
+                </div>
             </div>
         </div>
     </div>
