--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
                     <p>→ latest blender project • <a href="https://kosuka.dev/blender"
                             class="nira_chan">nira_chan_stylised.blend</a></p>
                     <div class="line"></div>
+                    <div>
+                        <h2>Friends!</h2>
+                    </div>
                 </div>
-                <div>
-                    <h2>Friends!</h2>
+                <div id="lastfm-container">
+
                 </div>
-                <div id="lastfm-container"></div>
             </div>
         </div>
     </div>
