--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                     <div>
                         <h2>Friends!</h2>
                     </div>
+                    <a href="https://botmert.com" class="link-box" target="_blank">
+                        <img src="http://botmert.com/assets/icon.jpg" alt="Website Icon">
+                    </a>
+
                 </div>
                 <div id="lastfm-container">
 
