--- a/index.html
+++ b/index.html
@@ -57,15 +57,14 @@
                 <div><br><br>
                     <h2>Creative projects</h2>
                     <p>→ latest blender project • <a href="https://kosuka.dev/blender"
-                            class="nira_chan">nira_chan_stylised.blend</a></p>
-                    <div class="line"></div>
+                            class="nira_chan">nira_chan_stylised.blend</a></p> <br>
                     <div>
                         <h2>Friends!</h2>
                     </div>
                     <a href="https://botmert.com" class="link-box" target="_blank">
                         <img src="http://botmert.com/assets/icon.jpg" alt="Website Icon">
                     </a>
-
+                    <div class="line"></div>
                 </div>
                 <div id="lastfm-container">
 
