--- a/contact/index.html
+++ b/contact/index.html
@@ -32,7 +32,7 @@
             <div class="title-image-wrapper">
                 <div class="title">
                     <h1>hi, i'm caitlyn!</h1>
-                    <p class="title-subtext" style="color: #ff9ac1; font-weight:500;">she/her</p>
+                    <p class="title-subtext" style="color: #9ad7ff; font-weight:500;">she/her</p>
                     <br>
                     <div class="line"></div>
                 </div>
