--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="title-image-wrapper">
                     <div class="title">
                         <h1>hi, i'm caitlyn!</h1>
-                        <p class="title-subtext" style="color: #ff9ac1; font-weight:500;">she/her</p>
+                        <p class="title-subtext" style="color: #9ad7ff; font-weight:500;">she/her</p>
                         <br>
                         <div class="line"></div>
                     </div>
@@ -39,16 +39,23 @@
                 <div class="title-subtext">
                     <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
                 </div>
-                <div class="box">
-                    <p>hii! (^o^)/—i'm a 19 year old girl from <strong>australia</strong> majoring in computer science
-                        who loves to learn new things, currently interested in learning: <strong>programming</strong>
-                        (python),
-                        <strong>🇨🇳 chinese,</strong> and 3D modeling via <strong>Blender!</strong>
-                        <br><br>
-                        i'm also a huge music fan, some of my favorite artists being Sampha, Kendrick Lamar, Kanye West,
-                        J Dilla, and Cocteau Twins.<br><br>
-                        One Piece fanatic ( • ⩊ • ).
-                    </p>
+                <div class="box-container">
+                    <div class="box">
+                        <p>hii! i'm a 19 year old girl from <strong>australia</strong> who is majoring in
+                            computer science who loves to learn new things all the time. </p>
+                        <p> currently studying: <strong>programming</strong>
+                            (python),
+                            <strong>🇨🇳 chinese,</strong> and 3D modeling via <strong>blender!</strong>
+                        </p>
+                    </div>
+                    <div class="box2">
+                        <p>
+                            <strong>actively interested in front end development</strong>
+                            <br>
+                            <br>
+                        <p>
+                            huge music nerd and one piece fanatic
+                    </div>
                 </div>
                 <div>
                     <h2>Projects</h2>
