--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="title-image-wrapper">
                     <div class="title">
                         <h1>hi, i'm caitlyn!</h1>
-                        <p class="title-subtext" style="color: #9ad7ff; font-weight:500;">she/her</p>
+                        <p class="title-subtext" style="color: #9ad7ff; font-weight:500;">she/her </p>
                         <br>
                         <div class="line"></div>
                     </div>
@@ -59,7 +59,7 @@
                 </div>
                 <div>
                     <h2>Projects</h2>
-                    <p>empty... for now :D</p>
+                    <p>currently empty</p>
                 </div>
                 <div><br><br>
                     <h2>Creative projects</h2>
