--- a/index.html
+++ b/index.html
@@ -23,15 +23,35 @@
     <div data-barba="container">
         <div id="content-wrapper" class="content-wrapper">
             <div class="buttons">
-                <a href="/" class="Home">Home</a>
-                <a href="/about/" class="About">About</a>
-                <a href="/contact/" class="Contact">Contact</a>
+                <div class="svgs">
+                    <a href="" class="discordsvg">
+                        <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
+                            text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
+                            clip-rule="evenodd" viewBox="0 0 512 365.467">
+                            <path fill="#fff"
+                                d="M378.186 365.028s-15.794-18.865-28.956-35.099c57.473-16.232 79.41-51.77 79.41-51.77-17.989 11.846-35.099 20.182-50.454 25.885-21.938 9.213-42.997 14.917-63.617 18.866-42.118 7.898-80.726 5.703-113.631-.438-25.008-4.827-46.506-11.407-64.494-18.867-10.091-3.947-21.059-8.774-32.027-14.917-1.316-.877-2.633-1.316-3.948-2.193-.877-.438-1.316-.878-1.755-.878-7.898-4.388-12.285-7.458-12.285-7.458s21.06 34.659 76.779 51.331c-13.163 16.673-29.395 35.977-29.395 35.977C36.854 362.395 0 299.218 0 299.218 0 159.263 63.177 45.633 63.177 45.633 126.354-1.311 186.022.005 186.022.005l4.388 5.264C111.439 27.645 75.461 62.305 75.461 62.305s9.653-5.265 25.886-12.285c46.945-20.621 84.236-25.885 99.592-27.64 2.633-.439 4.827-.878 7.458-.878 26.763-3.51 57.036-4.387 88.624-.878 41.68 4.826 86.43 17.111 132.058 41.68 0 0-34.66-32.906-109.244-55.281l6.143-7.019s60.105-1.317 122.844 45.628c0 0 63.178 113.631 63.178 253.585 0-.438-36.854 62.739-133.813 65.81l-.001.001zm-43.874-203.133c-25.006 0-44.75 21.498-44.75 48.262 0 26.763 20.182 48.26 44.75 48.26 25.008 0 44.752-21.497 44.752-48.26 0-26.764-20.182-48.262-44.752-48.262zm-160.135 0c-25.008 0-44.751 21.498-44.751 48.262 0 26.763 20.182 48.26 44.751 48.26 25.007 0 44.75-21.497 44.75-48.26.439-26.763-19.742-48.262-44.75-48.262z" />
+                        </svg>
+                    </a>
+                    <a href="" class="twittersvg">
+                        <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
+                            text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
+                            clip-rule="evenodd" viewBox="0 0 512 462.799">
+                            <path fill="#fff" fill-rule="nonzero"
+                                d="M403.229 0h78.506L310.219 196.04 512 462.799H354.002L230.261 301.007 88.669 462.799h-78.56l183.455-209.683L0 0h161.999l111.856 147.88L403.229 0zm-27.556 415.805h43.505L138.363 44.527h-46.68l283.99 371.278z" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="button-border">
+                    <a href="/" class="Home">Home</a>
+                    <a href="/about/" class="About">About</a>
+                    <a href="/contact/" class="Contact">Contact</a>
+                </div>
             </div>
             <div class="title-container">
                 <div class="title-image-wrapper">
                     <div class="title">
                         <h1>hi, i'm caitlyn!</h1>
-                        <p class="title-subtext" style="color: #9ad7ff; font-weight:500;">she/her </p>
+                        <p class="title-subtext" style="color: #9ad7ff; font-weight:500;">she/her</p>
                         <br>
                         <div class="line"></div>
                     </div>
