--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
             </div>
             <div class="title-container">
                 <div class="title-image-wrapper">
-                    <div class="title">
+                    <div class="title"> <br>
                         <h1>hi, i'm caitlyn!</h1>
                         <p class="title-subtext" style="color: #9ad7ff; font-weight:500;">she/her</p>
-                        <br>
                         <div class="line"></div>
                     </div>
                 </div>
@@ -81,9 +80,11 @@
                     <div>
                         <h2>Friends!</h2>
                     </div>
-                    <a href="https://botmert.com" class="link-box" target="_blank">
-                        <img src="http://botmert.com/assets/icon.jpg" alt="Website Icon">
-                    </a>
+                    <div class="friends">
+                        <a href="https://botmert.com" class="link-box" target="_blank">
+                            <img src="http://botmert.com/assets/icon.jpg" alt="Website Icon">
+                        </a>
+                    </div>
                     <div class="line"></div>
                 </div>
                 <div id="lastfm-container">
