botmert hates me and told me to remove the extra i

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="box-container">
                     <div class="box">
-                        <p>hii! i'm a 19 year old girl from <strong>australia</strong> who is majoring in
+                        <p>hi! i'm a 19 year old girl from <strong>australia</strong> who is majoring in
                             computer science who loves to learn new things all the time. </p>
                         <p> currently studying: <strong>programming</strong>
                             (python),
