mobile-test-python

--- a/contact/index.html
+++ b/contact/index.html
@@ -23,22 +23,33 @@
 <body>
     <div class="content-wrapper">
         <div class="buttons">
-            <a href="/" class="Home">Home</a>
-
-            <a href="/about/" class="About">About</a>
-            <a href="/contact/" class="Contact">Contact</a>
+            <div class="svgs">
+                </a>
+                <a href="https://x.com/fielstamper" class="twittersvg">
+                    <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
+                        text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
+                        clip-rule="evenodd" viewBox="0 0 512 462.799">
+                        <path fill="#fff" fill-rule="nonzero"
+                            d="M403.229 0h78.506L310.219 196.04 512 462.799H354.002L230.261 301.007 88.669 462.799h-78.56l183.455-209.683L0 0h161.999l111.856 147.88L403.229 0zm-27.556 415.805h43.505L138.363 44.527h-46.68l283.99 371.278z" />
+                    </svg>
+                </a>
+            </div>
+            <div class="button-border">
+                <a href="/" class="Home">Home</a>
+                <a href="/about/" class="About">About</a>
+                <a href="/contact/" class="Contact">Contact</a>
+            </div>
         </div>
         <div class="title-container">
             <div class="title-image-wrapper">
-                <div class="title">
+                <div class="title"> <br>
                     <h1>hi, i'm caitlyn!</h1>
                     <p class="title-subtext" style="color: #9ad7ff; font-weight:500;">she/her</p>
-                    <br>
                     <div class="line"></div>
                 </div>
             </div>
             <div class="title-subtext">
-                <p style="font-size: 20px; font-weight: 400;"><br>Socials</p>
+                <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
             </div>
             <div class="contactbox">
                 <div class="col1">
