--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="title-image-wrapper">
                     <div class="title"> <br>
                         <h1>hi, i'm caitlyn!</h1>
-                        <p class="title-subtext" style="color: #9ad7ff; font-weight:500;">she/her</p>
+                        <p class="title-subtext" style="color: #a8b3de; font-weight:500;">she/her</p>
                         <div class="line"></div>
                     </div>
                 </div>
@@ -56,8 +56,9 @@
                         <p>hi! i'm a 19 year old girl from <strong>australia</strong> who is majoring in
                             computer science who loves to learn new things all the time. </p>
                         <p> currently studying: <strong>programming</strong>
-                            (python),
-                            <strong>🇨🇳 chinese,</strong> and 3D modeling via <strong>blender!</strong>
+                            (python <img src="assets/python-svgrepo-com.svg" alt="python-emoji" class="pythonemoji"> ),
+                            <strong>🇨🇳 chinese,</strong> and 3D
+                            modeling via <strong>blender!</strong>
                         </p>
                     </div>
                     <div class="box2">
