--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="friends">
                         <a href="https://botmert.com" class="link-box" target="_blank">
-                            <img src="http://botmert.com/assets/icon.jpg" alt="Website Icon">
+                            <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
                         </a>
                     </div>
                     <div class="line"></div>
