--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="title-image-wrapper">
                     <div class="title"> <br>
                         <h1>hi, i'm caitlyn!</h1>
-                        <p class="title-subtext" style="color: #a8b3de; font-weight:500;">she/her</p>
+                        <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">she/her</p>
                         <div class="line"></div>
                     </div>
                 </div>
@@ -53,46 +53,55 @@
                 </div>
                 <div class="box-container">
                     <div class="box">
-                        <p>hi! i'm a 19 year old girl from <strong>australia</strong> who is majoring in
-                            computer science who loves to learn new things all the time. </p>
-                        <p> currently studying: <strong>programming</strong>
+                        <p>Hi! I'm a 19 year old girl from <strong>australia</strong> who is majoring in
+                            computer science that loves to learn new things all the time. </p>
+                        <p> I'm currently studying: <strong>programming</strong>
                             (python <img src="assets/python-svgrepo-com.svg" alt="python-emoji" class="pythonemoji"> ),
-                            <strong>🇨🇳 chinese,</strong> and 3D
+                            <strong>mandarin,</strong> and 3D
                             modeling via <strong>blender!</strong>
                         </p>
                     </div>
                     <div class="box2">
                         <p>
-                            <strong>actively interested in front end development</strong>
+                            <strong>Actively interested in front end development.</strong>
                             <br>
                             <br>
                         <p>
-                            huge music nerd and one piece fanatic
+                            Huge music nerd and one piece fanatic
                     </div>
                 </div>
-                <div>
-                    <h2>Projects</h2>
-                    <p>currently empty</p>
+                <div class="projectsheader">
+                    <h2 style="margin-bottom: 0;">Projects</h2>
+                    <p style="margin-top: 3px; color: rgb(180, 180, 180);">Currently empty</p>
                 </div>
                 <div><br><br>
                     <h2>Creative projects</h2>
-                    <p>→ latest blender project • <a href="https://kosuka.dev/blender"
-                            class="nira_chan">nira_chan_stylised.blend</a></p> <br>
-                    <div>
-                        <h2>Friends!</h2>
-                    </div>
-                    <div class="friends">
-                        <a href="https://botmert.com" class="link-box" target="_blank">
-                            <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
+                    <div class="creativewrapper">
+                        <a href="blender/index.html" class="nira-chan-box">
+                            nira_chan.blend <p class="creative-text">A stylised 3d model of nira from Zutomayo with
+                                size-emphasis on the shoes.</p>
+                        </a>
+                        <a href="blender/index.html" class="other-chan-box">
+                            .blend <p class="creative-text">wip</p>
                         </a>
                     </div>
-                    <div class="line"></div>
+                    <br>
+                    <div>
+                    </div>
                 </div>
-                <div id="lastfm-container">
+                <h2>Friends!</h2>
+                <div class="friends">
+                    <a href="https://botmert.com" class="link-box" target="_blank">
+                        <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
+                    </a>
+                </div>
+                <div class="line"></div>
+            </div>
+            <div id="lastfm-container">
 
-                </div>
             </div>
         </div>
+    </div>
     </div>
     </div>
     </div>
