--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h2>Creative projects</h2>
                     <div class="creativewrapper">
                         <a href="blender/index.html" class="nira-chan-box">
-                            nira_chan.blend <p class="creative-text">A stylised 3d model of nira from Zutomayo with
+                            nira_chan.blend <p class="creative-text">A stylised 3d model of Nira from Zutomayo with
                                 size-emphasis on the shoes.</p>
                         </a>
                         <a href="blender/index.html" class="other-chan-box">
