--- a/index.html
+++ b/index.html
@@ -94,16 +94,10 @@
                     <a href="https://botmert.com" class="link-box" target="_blank">
                         <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
                     </a>
+                    <div class="line"></div>
                 </div>
-                <div class="line"></div>
-                <div id="lastfm-container">
-
-                </div>
+                <div id="lastfm-container"></div>
             </div>
         </div>
-    </div>
-    </div>
-    </div>
-    </div>
     </div>
 </body>
