--- a/about/index.html
+++ b/about/index.html
@@ -45,7 +45,7 @@
                 <div class="title-image-wrapper">
                     <div class="title"> <br>
                         <h1>hi, i'm caitlyn!</h1>
-                        <p class="title-subtext" style="color: #9ad7ff; font-weight:500;">she/her</p>
+                        <p class="title-subtext" style="color: rgb(180, 180, 180);; font-weight:500;">any/all</p>
                         <div class="line"></div>
                     </div>
                 </div>
