--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="title-image-wrapper">
                     <div class="title"> <br>
                         <h1>hi, i'm caitlyn!</h1>
-                        <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">any/all</p>
+                        <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">any pronouns</p>
                         <div class="line"></div>
                     </div>
                 </div>
